fix: inline icons get stretched

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 .inline-icon {
-    display: inline;
+    display: inline-block;
     max-height: 1.3em;
     margin: 0 0.2em;
     background-color: #FCFCFC;
